Add missing configprops constructor to reflective configuration
See gh-1181